dhall/tests/type-inference/failure/unit/IfBranchesNotMatch.txt
Type error: error: IfBranchMismatch
 --> <current file>:1:1
  |
1 | if True then 1 else ""
  | ^^^^^^^^^^^^^^^^^^^^^^ IfBranchMismatch
  |
